Fix voice over for doodle

The accessibility is now done downstream.

Bug: 798075
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I71243ea8769212737d1b6d4650254b4363e364ab
Reviewed-on: https://chromium-review.googlesource.com/846987
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526490}
Former-commit-id: e5193ecd4bd9fa94578b6ad742ca4b77f2155c51